tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/emptyBValue.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:9813e8d22f1b89692014959ba1469766fbf1b31bbcce171bfa1b7d4916487cdd
size 149116
